spare/ARONParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/jasonosgood/Projects/aron/src/aron/ARON.g 2014-07-20 13:05:15
 
package aron;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.runtime.debug.*;
import java.io.IOException;
public class ARONParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Identifier", "Url", "Label", "Boolean", "Integer", "Float", "String", "Timestamp", "Reference", "Digit", "Exponent", "Escape", "Comment", "Whitespace", "'# ARON 0.1\\n'", "'import'", "'.'", "'include'", "'('", "')'", "'null'", "'['", "']'", "'{'", "'}'"
    };
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int Exponent=14;
    public static final int Url=5;
    public static final int Digit=13;
    public static final int EOF=-1;
    public static final int Escape=15;
    public static final int Identifier=4;
    public static final int Float=9;
    public static final int T__19=19;
    public static final int T__18=18;
    public static final int Comment=16;
    public static final int Boolean=7;
    public static final int Timestamp=11;
    public static final int String=10;
    public static final int Whitespace=17;
    public static final int Reference=12;
    public static final int Label=6;
    public static final int Integer=8;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "map", "synpred21_ARON", "synpred31_ARON", "synpred22_ARON", 
        "synpred27_ARON", "synpred17_ARON", "synpred2_ARON", "path", "childList", 
        "stringList", "url", "synpred15_ARON", "value", "method", "synpred14_ARON", 
        "synpred16_ARON", "synpred23_ARON", "synpred5_ARON", "klass", "child", 
        "floatList", "synpred34_ARON", "synpred25_ARON", "key", "synpred24_ARON", 
        "synpred29_ARON", "scalar", "synpred30_ARON", "pair", "synpred19_ARON", 
        "timestampList", "emptyList", "synpred1_ARON", "synpred9_ARON", 
        "imports", "synpred13_ARON", "includes", "synpred33_ARON", "synpred18_ARON", 
        "synpred26_ARON", "synpred3_ARON", "synpred10_ARON", "booleanList", 
        "synpred8_ARON", "synpred20_ARON", "root", "synpred11_ARON", "synpred28_ARON", 
        "override", "synpred6_ARON", "property", "synpred12_ARON", "list", 
        "synpred32_ARON", "integerList", "synpred4_ARON", "synpred7_ARON"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public ARONParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public ARONParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this, port, null);
            setDebugListener(proxy);
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
        }
    public ARONParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg, new RecognizerSharedState());

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }


    public String[] getTokenNames() { return ARONParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/jasonosgood/Projects/aron/src/aron/ARON.g"; }





    // $ANTLR start "root"
    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:38:1: root : '# ARON 0.1\\n' ( includes )* ( imports )* ( child )* ( override )* ;
    public final void root() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "root");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(38, 1);

        try {
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:39:3: ( '# ARON 0.1\\n' ( includes )* ( imports )* ( child )* ( override )* )
            dbg.enterAlt(1);

            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:39:5: '# ARON 0.1\\n' ( includes )* ( imports )* ( child )* ( override )*
            {
            dbg.location(39,5);
            match(input,18,FOLLOW_18_in_root69); if (state.failed) return ;
            dbg.location(40,3);
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:40:3: ( includes )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==21) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:40:5: includes
            	    {
            	    dbg.location(40,5);
            	    pushFollow(FOLLOW_includes_in_root76);
            	    includes();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(41,3);
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:41:3: ( imports )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==19) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:41:5: imports
            	    {
            	    dbg.location(41,5);
            	    pushFollow(FOLLOW_imports_in_root85);
            	    imports();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}

            dbg.location(42,3);
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:42:3: ( child )*
            try { dbg.enterSubRule(3);

            loop3:
            do {
                int alt3=2;
                try { dbg.enterDecision(3);

                int LA3_0 = input.LA(1);

                if ( (LA3_0==Identifier||LA3_0==Label) ) {
                    alt3=1;
                }


                } finally {dbg.exitDecision(3);}

                switch (alt3) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:42:5: child
            	    {
            	    dbg.location(42,5);
            	    pushFollow(FOLLOW_child_in_root94);
            	    child();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);
            } finally {dbg.exitSubRule(3);}

            dbg.location(43,3);
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:43:3: ( override )*
            try { dbg.enterSubRule(4);

            loop4:
            do {
                int alt4=2;
                try { dbg.enterDecision(4);

                int LA4_0 = input.LA(1);

                if ( (LA4_0==Reference) ) {
                    alt4=1;
                }


                } finally {dbg.exitDecision(4);}

                switch (alt4) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:43:5: override
            	    {
            	    dbg.location(43,5);
            	    pushFollow(FOLLOW_override_in_root103);
            	    override();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);
            } finally {dbg.exitSubRule(4);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(44, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "root");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "root"


    // $ANTLR start "imports"
    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:46:1: imports : 'import' klass ;
    public final void imports() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "imports");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(46, 1);

        try {
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:47:3: ( 'import' klass )
            dbg.enterAlt(1);

            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:47:5: 'import' klass
            {
            dbg.location(47,5);
            match(input,19,FOLLOW_19_in_imports119); if (state.failed) return ;
            dbg.location(47,14);
            pushFollow(FOLLOW_klass_in_imports121);
            klass();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(48, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "imports");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "imports"


    // $ANTLR start "klass"
    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:51:1: klass : Identifier ( '.' Identifier )* ;
    public final void klass() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "klass");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(51, 1);

        try {
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:52:3: ( Identifier ( '.' Identifier )* )
            dbg.enterAlt(1);

            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:52:5: Identifier ( '.' Identifier )*
            {
            dbg.location(52,5);
            match(input,Identifier,FOLLOW_Identifier_in_klass136); if (state.failed) return ;
            dbg.location(52,16);
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:52:16: ( '.' Identifier )*
            try { dbg.enterSubRule(5);

            loop5:
            do {
                int alt5=2;
                try { dbg.enterDecision(5);

                int LA5_0 = input.LA(1);

                if ( (LA5_0==20) ) {
                    alt5=1;
                }


                } finally {dbg.exitDecision(5);}

                switch (alt5) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:52:18: '.' Identifier
            	    {
            	    dbg.location(52,18);
            	    match(input,20,FOLLOW_20_in_klass140); if (state.failed) return ;
            	    dbg.location(52,22);
            	    match(input,Identifier,FOLLOW_Identifier_in_klass142); if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);
            } finally {dbg.exitSubRule(5);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(53, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "klass");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "klass"


    // $ANTLR start "includes"
    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:55:1: includes : 'include' url ;
    public final void includes() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "includes");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(55, 1);

        try {
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:56:3: ( 'include' url )
            dbg.enterAlt(1);

            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:56:5: 'include' url
            {
            dbg.location(56,5);
            match(input,21,FOLLOW_21_in_includes160); if (state.failed) return ;
            dbg.location(56,15);
            pushFollow(FOLLOW_url_in_includes162);
            url();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(57, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "includes");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "includes"


    // $ANTLR start "url"
    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:60:1: url : Url ;
    public final void url() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "url");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(60, 1);

        try {
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:61:3: ( Url )
            dbg.enterAlt(1);

            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:61:5: Url
            {
            dbg.location(61,5);
            match(input,Url,FOLLOW_Url_in_url177); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(62, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "url");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "url"


    // $ANTLR start "child"
    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:64:1: child : ( Label )? Identifier ( '(' ( property )* ')' )? ;
    public final void child() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "child");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(64, 1);

        try {
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:65:3: ( ( Label )? Identifier ( '(' ( property )* ')' )? )
            dbg.enterAlt(1);

            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:65:5: ( Label )? Identifier ( '(' ( property )* ')' )?
            {
            dbg.location(65,5);
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:65:5: ( Label )?
            int alt6=2;
            try { dbg.enterSubRule(6);
            try { dbg.enterDecision(6);

            int LA6_0 = input.LA(1);

            if ( (LA6_0==Label) ) {
                alt6=1;
            }
            } finally {dbg.exitDecision(6);}

            switch (alt6) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:65:7: Label
                    {
                    dbg.location(65,7);
                    match(input,Label,FOLLOW_Label_in_child194); if (state.failed) return ;

                    }
                    break;

            }
            } finally {dbg.exitSubRule(6);}

            dbg.location(65,16);
            match(input,Identifier,FOLLOW_Identifier_in_child199); if (state.failed) return ;
            dbg.location(65,27);
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:65:27: ( '(' ( property )* ')' )?
            int alt8=2;
            try { dbg.enterSubRule(8);
            try { dbg.enterDecision(8);

            int LA8_0 = input.LA(1);

            if ( (LA8_0==22) ) {
                alt8=1;
            }
            } finally {dbg.exitDecision(8);}

            switch (alt8) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:65:29: '(' ( property )* ')'
                    {
                    dbg.location(65,29);
                    match(input,22,FOLLOW_22_in_child203); if (state.failed) return ;
                    dbg.location(65,33);
                    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:65:33: ( property )*
                    try { dbg.enterSubRule(7);

                    loop7:
                    do {
                        int alt7=2;
                        try { dbg.enterDecision(7);

                        int LA7_0 = input.LA(1);

                        if ( (LA7_0==Identifier) ) {
                            alt7=1;
                        }


                        } finally {dbg.exitDecision(7);}

                        switch (alt7) {
                    	case 1 :
                    	    dbg.enterAlt(1);

                    	    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:65:35: property
                    	    {
                    	    dbg.location(65,35);
                    	    pushFollow(FOLLOW_property_in_child207);
                    	    property();

                    	    state._fsp--;
                    	    if (state.failed) return ;

                    	    }
                    	    break;

                    	default :
                    	    break loop7;
                        }
                    } while (true);
                    } finally {dbg.exitSubRule(7);}

                    dbg.location(65,47);
                    match(input,23,FOLLOW_23_in_child212); if (state.failed) return ;

                    }
                    break;

            }
            } finally {dbg.exitSubRule(8);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(66, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "child");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "child"


    // $ANTLR start "property"
    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:68:1: property : Identifier value ;
    public final void property() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "property");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(68, 1);

        try {
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:69:3: ( Identifier value )
            dbg.enterAlt(1);

            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:69:5: Identifier value
            {
            dbg.location(69,5);
            match(input,Identifier,FOLLOW_Identifier_in_property228); if (state.failed) return ;
            dbg.location(69,16);
            pushFollow(FOLLOW_value_in_property230);
            value();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(70, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "property");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "property"


    // $ANTLR start "value"
    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:72:1: value : ( scalar | child | list | map );
    public final void value() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "value");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(72, 1);

        try {
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:73:3: ( scalar | child | list | map )
            int alt9=4;
            try { dbg.enterDecision(9);

            switch ( input.LA(1) ) {
            case Boolean:
            case Integer:
            case Float:
            case String:
            case Timestamp:
            case Reference:
            case 24:
                {
                alt9=1;
                }
                break;
            case Identifier:
            case Label:
                {
                alt9=2;
                }
                break;
            case 25:
                {
                alt9=3;
                }
                break;
            case 27:
                {
                alt9=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }

            } finally {dbg.exitDecision(9);}

            switch (alt9) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:73:5: scalar
                    {
                    dbg.location(73,5);
                    pushFollow(FOLLOW_scalar_in_value245);
                    scalar();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:74:5: child
                    {
                    dbg.location(74,5);
                    pushFollow(FOLLOW_child_in_value251);
                    child();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:75:5: list
                    {
                    dbg.location(75,5);
                    pushFollow(FOLLOW_list_in_value257);
                    list();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:76:5: map
                    {
                    dbg.location(76,5);
                    pushFollow(FOLLOW_map_in_value263);
                    map();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(77, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "value");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "value"


    // $ANTLR start "scalar"
    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:79:1: scalar : ( Boolean | Integer | Float | String | Timestamp | Reference | 'null' );
    public final void scalar() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "scalar");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(79, 1);

        try {
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:80:3: ( Boolean | Integer | Float | String | Timestamp | Reference | 'null' )
            dbg.enterAlt(1);

            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:
            {
            dbg.location(80,3);
            if ( (input.LA(1)>=Boolean && input.LA(1)<=Reference)||input.LA(1)==24 ) {
                input.consume();
                state.errorRecovery=false;state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(87, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "scalar");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "scalar"


    // $ANTLR start "list"
    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:90:1: list : ( emptyList | '[' ( integerList | floatList | timestampList | booleanList | stringList | childList )? ']' );
    public final void list() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "list");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(90, 1);

        try {
            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:91:3: ( emptyList | '[' ( integerList | floatList | timestampList | booleanList | stringList | childList )? ']' )
            int alt11=2;
            try { dbg.enterDecision(11);

            int LA11_0 = input.LA(1);

            if ( (LA11_0==25) ) {
                int LA11_1 = input.LA(2);

                if ( (LA11_1==26) ) {
                    int LA11_2 = input.LA(3);

                    if ( (synpred18_ARON()) ) {
                        alt11=1;
                    }
                    else if ( (true) ) {
                        alt11=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 11, 2, input);

                        dbg.recognitionException(nvae);
                        throw nvae;
                    }
                }
                else if ( (LA11_1==Identifier||(LA11_1>=Label && LA11_1<=Timestamp)) ) {
                    alt11=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 11, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 11, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(11);}

            switch (alt11) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:91:5: emptyList
                    {
                    dbg.location(91,5);
                    pushFollow(FOLLOW_emptyList_in_list328);
                    emptyList();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:92:5: '[' ( integerList | floatList | timestampList | booleanList | stringList | childList )? ']'
                    {
                    dbg.location(92,5);
                    match(input,25,FOLLOW_25_in_list334); if (state.failed) return ;
                    dbg.location(93,5);
                    // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:93:5: ( integerList | floatList | timestampList | booleanList | stringList | childList )?
                    int alt10=7;
                    try { dbg.enterSubRule(10);
                    try { dbg.enterDecision(10);

                    switch ( input.LA(1) ) {
                        case Integer:
                            {
                            alt10=1;
                            }
                            break;
                        case Float:
                            {
                            alt10=2;
                            }
                            break;
                        case Timestamp:
                            {
                            alt10=3;
                            }
                            break;
                        case Boolean:
                            {
                            alt10=4;
                            }
                            break;
                        case String:
                            {
                            alt10=5;
                            }
                            break;
                        case Identifier:
                        case Label:
                            {
                            alt10=6;
                            }
                            break;
                    }

                    } finally {dbg.exitDecision(10);}

                    switch (alt10) {
                        case 1 :
                            dbg.enterAlt(1);

                            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:93:7: integerList
                            {
                            dbg.location(93,7);
                            pushFollow(FOLLOW_integerList_in_list342);
                            integerList();

                            state._fsp--;
                            if (state.failed) return ;

                            }
                            break;
                        case 2 :
                            dbg.enterAlt(2);

                            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:94:7: floatList
                            {
                            dbg.location(94,7);
                            pushFollow(FOLLOW_floatList_in_list351);
                            floatList();

                            state._fsp--;
                            if (state.failed) return ;

                            }
                            break;
                        case 3 :
                            dbg.enterAlt(3);

                            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:95:7: timestampList
                            {
                            dbg.location(95,7);
                            pushFollow(FOLLOW_timestampList_in_list359);
                            timestampList();

                            state._fsp--;
                            if (state.failed) return ;

                            }
                            break;
                        case 4 :
                            dbg.enterAlt(4);

                            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:96:7: booleanList
                            {
                            dbg.location(96,7);
                            pushFollow(FOLLOW_booleanList_in_list367);
                            booleanList();

                            state._fsp--;
                            if (state.failed) return ;

                            }
                            break;
                        case 5 :
                            dbg.enterAlt(5);

                            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:97:7: stringList
                            {
                            dbg.location(97,7);
                            pushFollow(FOLLOW_stringList_in_list375);
                            stringList();

                            state._fsp--;
                            if (state.failed) return ;

                            }
                            break;
                        case 6 :
                            dbg.enterAlt(6);

                            // /Users/jasonosgood/Projects/aron/src/aron/ARON.g:98:7: childList
                            {
                            dbg.location(98,7);
                            pushFollow(FOLLOW_childList_in_list383);
                            childList();

                            state._fsp--;
                            if (state.failed) return ;

                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(10);}

                    dbg.location(100,5);
                    match(input,26,FOLLOW_26_in_list396); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(101, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "list");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "list"

